pitrery 1.7
===========

  * Allow configuration of compression tools used when storing backup
    contents using tar.

  * Remove the `pitr_mgr` symlink.

  * Have `archive_xlog` create the local target directory so that we don't
    end up archiving on the same path, when the user forget to create it.

  * Run backup hook command even if the backup fails. The exit code of the
    backup is available to the hook in the PITRERY_EXIT_CODE env variable.

  * Bugfix on sed -E vs sed -r, use the later for older GNU sed.


pitrery 1.6
===========

  * Exit without error when backup is run on a hot standby
    server. Issue a warning message when run interactively, so an
    active cron job does not send any mail.

  * Bugfixes and improvements on documentation


pitrery 1.5
===========

  * Force the checkpoint on pg_start_backup() when possible

  * Support rsync for the base backup. tar remains the default with a
    new -s option for backup_pitr and the STORAGE configuration
    variable

  * Save configuration files if they are outside of PGDATA

  * Rename `pitr_mgr` to `pitrery`, with a symlink for backward
    compatibility

  * Make the time based purge compatible with the count purge,
    allowing to purge backups based on age _and_ keeping a minimum
    number of backups

  * Make the old WAL purge better by comparing parts of the file name
    instead of the whole. Bash does not handle well the full file name
    when converted to a number (too big)

  * Safely purge old .backup files. Always keep .history files

  * Improve documentation

  * Better check the input file in archive_xlog

  * Use rsync to safely transfer to the remote host in archive_xlog

  * Document compression tools options

  * Add a verbose mode to list, with sizes and locations

  * Allow to specify the oid of a tablespace when give path for relocation:
    -t oid:/new/path or -t name:/new/path is possible


pitrery 1.4
===========
