@@ -1,5 +1,2 @@
 TODO / Roadmap
 
-+ configure tar base backup compression
-- show the storage method of each backup in list_pitr
-
